<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ydg_top_bg"
        >
        <!--返回  -->
       <Button 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/back"
           android:layout_marginLeft="5dp"
           android:layout_gravity="center_vertical"
           android:background="@drawable/ydg_back_btn_bg"
           android:id="@+id/back2"
           />
       <TextView 
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/dalishouzhi"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:textSize="18sp"
           android:gravity="center"
           /> 
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        >
        <RadioGroup 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup1"
            android:orientation="horizontal"
            >
            <RadioButton 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:text="@string/shourutj"
                android:checked="true"
                />
            <RadioButton 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:text="@string/zhichutj"
                android:layout_marginLeft="20dp"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/choicesubject" 
          android:layout_marginLeft="10dp" 
          android:textSize="16sp" 
            />
        <Spinner 
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/spinnerChoice"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        >
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/t_subject"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/t_money"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/t_model"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/t_date"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
    </LinearLayout>
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:id="@+id/listView1"
        android:background="@color/pink"
        android:layout_marginTop="5dp"
        ></ListView>
</LinearLayout>
