<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/back"
        android:id="@+id/report_back"
        android:background="#00000000"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button_left"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/myselector_left" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/myselector_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:gravity="center"
        >
        <RadioGroup 
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/radio_group1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton 
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/radion_account"
                android:text="@string/account"
                android:textColor="@color/white"
                android:layout_marginLeft="40dp"
                />
            
            <RadioButton 
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/radion_subject"
                android:text="@string/kemu"
                android:textColor="@color/white"
                android:layout_marginLeft="40dp"
                android:checked="true"
                />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Button 
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:id="@+id/day_report_forms"
            android:text="每天报表"
            android:textColor="@color/white"
            android:background="@drawable/tx_top_normal_btn_bg"
            android:layout_marginTop="5dp"
            />
        <Button 
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:id="@+id/week_report_forms"
            android:text="每周报表"
            android:textColor="@color/white"
            android:background="@drawable/tx_top_normal_btn_bg"
            android:layout_marginTop="15dp"
            />
        <Button 
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:id="@+id/month_report_forms"
            android:text="每月报表"
            android:textColor="@color/white"
            android:background="@drawable/tx_top_normal_btn_bg_active"
            android:layout_marginTop="15dp"
            />
        
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bb_top_bg"
        android:layout_marginTop="40dp"
        >
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_report_forms"
            android:background="@drawable/myselector_tx_normal"
            android:text="@string/show_report_forms"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            />
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_report_forms_list"
            android:background="@drawable/myselector_list"
            android:text=""
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            />
    </RelativeLayout>
    
    
    
</LinearLayout>