<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical" >

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ydg_top_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/budget_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ydg_back_btn_bg"
            android:text="@string/back" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:text="@string/month_budget"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <!-- head -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/text_budget_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_total"
                android:textColor="@color/black"
                android:textSize="20sp" >
            </TextView>

            <ProgressBar
                android:id="@+id/budget_progress_horizontal_total"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:max="100"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/text_budget_total_money"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/text_budget_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="预算未设置"
                android:textColor="@color/black"
                android:textSize="16sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listview_budeget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:cacheColorHint="#00000000" >
        </ListView>
    </LinearLayout>

</LinearLayout>